	CHG: Standardised ocarina songs.
	CHG: Changed ocarina notes sprites.
	CHG: Hid the mouse cursor.
	CHG: Changed max magic values to 39, 79 and 119 (#229).
	CHG: Changed magic bar values in the HUD according to the max magic values.
	CHG: Changed magic bar and hearts colours in the HUD.
	CHG: Improved the shield usability (#30).
	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
	FIX: Fixed case sensibility issues (#133).
	FIX: Fixed Hyrule's Castle side doors opening sensors missing (#139).
	FIX: Fixed NPC sprites being at the wrong place in the sprite image (#135).
	FIX: Fixed an "invalid destination side" crash when entering the Hyrule Town library (#136).
	FIX: Fixed missing NPC soldiers issues at some quest steps.
	FIX: Fixed the hammer stake being down before Link hits it (#142).
	FIX: Fixed Agahnim being spelled wrong.
	FIX: Fixed missing animations for other tunics (#47).
	FIX: Fixed a missing sword shield sprites crash (#154).
	FIX: Fixed a lava plunging sound playing when entering the ground floor in the Dodongo's Cavern (#157).
	FIX: Fixed Hyrule Castle music being played at the beginning of the game at the ground floor (#158).
	FIX: Fixed the player's name not being displayed in one dialogue in the intro cutscene (#156).
	FIX: Fixed a wrong teletransporter linking in the Hyrule Town (#155).
	FIX: Fixed a missing NPC sprite in the Hyrule Town inn (#160).
	FIX: Fixed the purple house door being misplaced in the Hyrule Town.
	FIX: Fixed map:set_doors_open() playing a sound when it shouldn't (#163).
	FIX: Fixed the water level changing animation in the Water Temple (#56).
	FIX: Fixed Bari enemies animation not being accurate to ALTTP (#143).
	FIX: Fixed a nil value error in the Hyrule Castle (#171).
	FIX: Fixed the Zora River caves being unreachable in J2 (#172).