@@ -1454,7 +1454,6 @@ music{ id = "outside/tmc_minish_woods", description = "Minish Woods" }
 music{ id = "outside/town_ruto", description = "(Outset Island)" }
 music{ id = "outside/west_mountains", description = "West Mountains" }
 music{ id = "outside/zora", description = "Zora Domain" }
-music{ id = "samen", description = "same" }
 
 sound{ id = "arrow_hit", description = "Empty sound" }
 sound{ id = "boomerang", description = "Empty sound" }
