@@ -461,6 +461,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Changed magic bar values in the HUD according to the max magic values.
 	CHG: Changed magic bar and hearts colours in the HUD.
 	CHG: Improved the shield usability (#30).
+	CHG: Removed the hero light when the lamp isn't assigned.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
